# Otter

./: .env.example  README.md  config.yml  pyproject.toml  requirements.txt
services/open-webui/: docker-compose.yml.j2
services/open-webui/functions/: execution_plan_editor.py
services/pipelines/: docker-compose.yml.j2  main.py  start.sh
src/otter/: config.yml  context_classes.py  registry.py
src/otter/capabilities/: analyze_runs.py  extract_run_filters.py  propose_routines.py  query_runs.py
src/otter/data_sources/: badger_archive.py
src/otter/framework_prompts/: orchestrator.py  response_generation.py
src/otter/providers/: __init__.py  stanford.py
src/otter/tests/: test_beamline_filter.py  test_objective_stats.py  test_otter_basic.py  test_otter_capability.py  test_otter_filtering.py  test_workflow_integration.py
